# Synrinth

./: Cargo.toml  README.md
src/: api.rs  errors.rs  lib.rs  structs.rs
src/api/: mod.rs  mrpack.rs  project.rs  search.rs
src/models/: mod.rs  mrpack.rs  project.rs  search.rs
src/structs/: mod.rs
