[package]
name = "synrinth"
version = "0.1.9"
edition = "2024"
authors = ["STierProgrammer"]
description = "Rust wrapper for the official Modrinth API "
repository = "https://github.com/SynthLauncher/Synrinth"
license = "MIT"

[dependencies]
reqwest = "0.12.18"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
zip = "4.0.0"
