[package]
name = "synrinth"
version = "0.2.1"
edition = "2024"
authors = ["STierProgrammer"]
description = "Rust wrapper for the official Modrinth API "
repository = "https://github.com/SynthLauncher/Synrinth"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
